Update and rename Privacy-policy.html to privacy-policy.html

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,3 +1,7 @@
+<h1>Privacy Policy</h1>
+<p>This is the privacy policy for the Alternative Medicine Research app.</p>
+
+
 Privacy Policy – Alternative medicine research 
 
 Last updatede: 19/11/25
