--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,13 +1,50 @@
-<h1>Privacy Policy</h1>
-<p>This is the privacy policy for the Alternative Medicine Research app.</p>
+<h1>Privacy Policy – Alternative Medicine Research</h1>
 
+<p><strong>Last updated:</strong> 19/11/2025</p>
 
-Privacy Policy – Alternative medicine research 
+<p>
+The Alternative Medicine Research application is committed to protecting your privacy.
+This application does <strong>not</strong> collect, store, process, or share any personal
+or sensitive user data.
+</p>
 
-Last updatede: 19/11/25
+<h2>Information Collection and Use</h2>
+<p>
+The app does not request any user information. It does not collect names, email
+addresses, device data, location data, or any other personally identifiable information.
+</p>
 
-This application does not collect, store, process, or share any personal data.
-The app does not use analytics, cookies, trackers, or advertising identifiers.
-No permissions are requested, and no user data is transferred to third parties.
+<h2>Data Tracking and Analytics</h2>
+<p>
+This application does not use tracking technologies, cookies, analytics tools, advertising
+identifiers, or any third-party services that collect user data.
+</p>
 
-For questions, contact: isabel.valkrusman@gmail.com
+<h2>Permissions</h2>
+<p>
+The app does not request or require any device permissions.
+</p>
+
+<h2>Data Sharing</h2>
+<p>
+No user data is collected, stored, or shared. Therefore, nothing is transmitted to
+third parties.
+</p>
+
+<h2>Children’s Privacy</h2>
+<p>
+The app is suitable for general audiences. Since no data is collected, no special 
+handling of children’s data is required.
+</p>
+
+<h2>Changes to This Privacy Policy</h2>
+<p>
+If any updates are made to this policy, they will be reflected on this page with
+an updated revision date.
+</p>
+
+<h2>Contact</h2>
+<p>
+If you have any questions about this Privacy Policy, feel free to contact us at:<br>
+<strong>isabel.valkrusman@gmail.com</strong>
+</p>
